--- a/config.yml
+++ b/config.yml
@@ -9,149 +9,149 @@
 # Title of this site
 # ---------------------------------------------------------------------
 
-title: ${W_TITLE}
+title: Wiki
 
 # ---------------------------------------------------------------------
 # Full public path to the site, without the trailing slash
 # ---------------------------------------------------------------------
 # INCLUDE CLIENT PORT IF NOT 80/443!
 
-host: ${W_HOST}
+host: http://localhost
 
 # ---------------------------------------------------------------------
 # Port the main server should listen to (80 by default)
 # ---------------------------------------------------------------------
 # To use process.env.PORT, comment the line below:
 
-port: ${W_PORT}
+port: 80
 
 # ---------------------------------------------------------------------
 # Data Directories
 # ---------------------------------------------------------------------
 
 paths:
-  repo: ${W_REPO_PATH}
-  data: ${W_DATA_PATH}
+  repo: ./repo
+  data: ./data
 
 # ---------------------------------------------------------------------
 # Upload Limits
 # ---------------------------------------------------------------------
-# In megabytes (MB}
+# In megabytes (MB)
 
 uploads:
-  maxImageFileSize: ${W_MAX_IMAGE_FILE_SIZE}
-  maxOtherFileSize: ${W_MAX_OTHER_FILE_SIZE}
+  maxImageFileSize: 3
+  maxOtherFileSize: 100
 
 # ---------------------------------------------------------------------
 # Site Language
 # ---------------------------------------------------------------------
 # Possible values: en, de, es, fa, fr, ja, ko, nl, pt, ru, sr, sv, tr or zh
 
-lang: ${W_LANG}
+lang: en
 
 # Enable for right to left languages (e.g. arabic):
-langRtl: ${W_LANG_RTL}
+langRtl: false
 
 # ---------------------------------------------------------------------
 # Site Authentication
 # ---------------------------------------------------------------------
 
-public: ${W_PUBLIC_ACCESS}
+public: false
 
 auth:
-  defaultReadAccess: ${W_AUTH_DEFAULT_READ_ACCESS}
+  defaultReadAccess: false
   local:
-    enabled: ${W_AUTH_LOCAL}
+    enabled: true
   google:
-    enabled: ${W_AUTH_GOOGLE}
-    clientId: ${W_AUTH_GG_CLIENT_ID}
-    clientSecret: ${W_AUTH_GG_CLIENT_SECRET}
+    enabled: true
+    clientId: GOOGLE_CLIENT_ID
+    clientSecret: GOOGLE_CLIENT_SECRET
   microsoft:
-    enabled: ${W_AUTH_MICROSOFT}
-    clientId: ${W_AUTH_MS_CLIENT_ID}
-    clientSecret: ${W_AUTH_MS_CLIENT_SECRET}
+    enabled: true
+    clientId: MS_APP_ID
+    clientSecret: MS_APP_SECRET
   facebook:
-    enabled: ${W_AUTH_FACEBOOK}
-    clientId: ${W_AUTH_FB_CLIENT_ID}
-    clientSecret: ${W_AUTH_FB_CLIENT_SECRET}
+    enabled: false
+    clientId: FACEBOOK_APP_ID
+    clientSecret: FACEBOOK_APP_SECRET
   github:
-    enabled: ${W_AUTH_GITHUB}
-    clientId: ${W_AUTH_GH_CLIENT_ID}
-    clientSecret: ${W_AUTH_GH_CLIENT_SECRET}
+    enabled: false
+    clientId: GITHUB_CLIENT_ID
+    clientSecret: GITHUB_CLIENT_SECRET
   slack:
-    enabled: ${W_AUTH_SLACK}
-    clientId: ${W_AUTH_SK_CLIENT_ID}
-    clientSecret: ${W_AUTH_CLIENT_SECRET}
+    enabled: false
+    clientId: 'SLACK_CLIENT_ID'
+    clientSecret: 'SLACK_CLIENT_SECRET'
   ldap:
-    enabled: ${W_AUTH_LDAP}
-    url: ${W_AUTH_LDAP_URL}
-    bindDn: ${W_AUTH_LDAP_BIND_DN}
-    bindCredentials: ${W_AUTH_LDAP_BIND_CREDENTIALS}
-    searchBase: ${W_AUTH_LDAP_SEARCH_BASE}
-    searchFilter: ${W_AUTH_LDAP_SEARCH_FILTER}
-    tlsEnabled: ${W_AUTH_LDAP_TLS_ENABLE}
-    tlsCertPath: ${W_AUTH_LDAP_TLS_CERT_PATH}
+    enabled: false
+    url: ldap://serverhost:389
+    bindDn: cn='root'
+    bindCredentials: BIND_PASSWORD
+    searchBase: o=users,o=example.com
+    searchFilter: (uid={{username}})
+    tlsEnabled: false
+    tlsCertPath: C:\example\root_ca_cert.crt
   azure:
-    enabled: ${W_AUTH_AZURE}
-    clientId: ${W_AUTH_AZ_CLIENT_ID}
-    clientSecret: ${W_AUTH_AZ_CLIENT_SECRET}
-    resource: ${W_AUTH_AZ_RESOURCE}
-    tenant: ${W_AUTH_AZ_TENANT}
+    enabled: false
+    clientId: APP_ID
+    clientSecret: APP_SECRET_KEY
+    resource: '00000002-0000-0000-c000-000000000000'
+    tenant: 'YOUR_TENANT.onmicrosoft.com'
   oauth2:
-    enabled: ${W_AUTH_OAUTH2}
-    clientId: ${W_AUTH_OH_CLIENT_ID}
-    clientSecret: ${W_AUTH_OH_CLIENT_SECRET}
-    authorizationURL: ${W_AUTH_OH_AUTHORIZATION_URL}
-    tokenURL: ${W_AUTH_OH_TOKEN_URL}
+    enabled: false
+    clientId: OAUTH2_CLIENT_ID
+    clientSecret: OAUTH2_CLIENT_SECRET
+    authorizationURL: OAUTH2_AUTH_URL
+    tokenURL: OAUTH2_TOKEN_URL
   oidc:
-    enabled: ${W_AUTH_OIDC}
-    clientId: ${W_AUTH_OC_CLIENT_ID}
-    clientSecret: ${W_AUTH_OC_CLIENT_SECRET}
-    issuer: ${W_AUTH_OC_ISSUER}
-    userInfoUrl: ${W_AUTH_OC_USER_INFO_URL}
-    authorizationURL: ${W_AUTH_OC_AUTHORIZATION_URL}
-    tokenURL: ${W_AUTH_OC_TOKEN_URL
-    emailClaim: ${W_AUTH_OC_EMAIL_CLAIM}
-    usernameClaim: ${W_AUTH_OC_USERNAME_CLAIM}
+    enabled: false
+    clientId: OPENID_CONNECT_CLIENT_ID
+    clientSecret: OPENID_CONNECT_CLIENT_SECRET
+    issuer: OPENID_CONNECT_ISSUER
+    userInfoUrl: OPENID_CONNECT_USER_INFO_URL
+    authorizationURL: OPENID_CONNECT_AUTHORIZATION_URL
+    tokenURL: OPENID_CONNECT_TOKEN_URL
+    emailClaim: OPENID_CONNECT_EMAIL_CLAIM_PATH
+    usernameClaim: OPENID_CONNECT_USERNAME_CLAIM_PATH
 # ---------------------------------------------------------------------
 # Secret key to use when encrypting sessions
 # ---------------------------------------------------------------------
 # Use a long and unique random string (256-bit keys are perfect!)
 
-sessionSecret: ${W_SESSION_SECRET}
+sessionSecret: 1234567890abcdefghijklmnopqrstuvxyz
 
 # ---------------------------------------------------------------------
 # Database Connection String
 # ---------------------------------------------------------------------
 
-db: ${W_DB_CONNECTION_STRING}
+db: mongodb://localhost:27017/wiki
 
 # ---------------------------------------------------------------------
 # Git Connection Info
 # ---------------------------------------------------------------------
 
-git: ${W_GIT_ENABLE}
-  # url: ${W_GH_URL:-https://github.com/Organization/Repo}
-  # branch: ${W_GH_BRANCH:-master}
-  # auth:
+git:
+  url: https://github.com/Organization/Repo
+  branch: master
+  auth:
 
-  #   # Type: basic or ssh
-  #   type: ${W_GH_AUTH_TYPE:-ssh}
+    # Type: basic or ssh
+    type: ssh
 
-  #   # Only for Basic authentication:
-  #   username: ${W_GH_USERNAME:-marty}
-  #   password: ${W_GH_PASSWORD:-MartyMcFly88}
+    # Only for Basic authentication:
+    username: marty
+    password: MartyMcFly88
 
-  #   # Only for SSH authentication:
-  #   privateKey: ${W_GH_PRIVATE_KEY_PATH:-/etc/wiki/keys/git.pem}
+    # Only for SSH authentication:
+    privateKey: /etc/wiki/keys/git.pem
 
-  #   sslVerify: ${W_GH_SSL_VERIFY}
+    sslVerify: true
 
-  # # Default email to use as commit author
-  # serverEmail: ${W_GH_SERVER_EMAIL:-marty@example.com}
+  # Default email to use as commit author
+  serverEmail: marty@example.com
 
-  # # Whether to use user email as author in commits
-  # showUserEmail: ${W_GH_SHOW_USER_EMAIL}
+  # Whether to use user email as author in commits
+  showUserEmail: true
 
 # ---------------------------------------------------------------------
 # Features
@@ -159,31 +159,29 @@ git: ${W_GIT_ENABLE}
 # You can enable / disable specific features below
 
 features:
-  linebreaks: ${W_FT_LINE_BREAKS}
-  mathjax: ${W_FT_MATHJAX}
+  linebreaks: true
+  mathjax: true
 
 # ---------------------------------------------------------------------
 # External Logging
 # ---------------------------------------------------------------------
 
 externalLogging:
-  bugsnag: ${W_EL_BUGSNAG_ENABLE}
-  loggly: ${W_EL_LOGGLY_ENABLE}
-  papertrail: ${W_EL_PAPERTRAIL_ENABLE}
-  rollbar: ${W_EL_ROLLBAR_ENABLE}
-  sentry: ${W_EL_SENTRY_ENABLE}
+  bugsnag: false
+  loggly: false
+  papertrail: false
+  rollbar: false
+  sentry: false
 
 # ---------------------------------------------------------------------
 # Color Theme
 # ---------------------------------------------------------------------
 
 theme:
-  primary: ${W_THEME_PRIMARY}
-  alt: ${W_THEME_ALT}
-  viewSource: ${W_THEME_VIEWSOURCE}
-  footer: ${W_THEME_FOOTER}
+  primary: indigo
+  alt: blue-grey
+  viewSource: all # all | write | false
+  footer: blue-grey
   code:
-    dark: ${W_THEME_CODE_ENABLE}
-    colorize: ${W_THEME_COLORIZE_ENABLE}
-
-#
+    dark: true
+    colorize: true
